# django-tutorial

./: README.md  pyproject.toml
django_project/blog/: admin.py  models.py  urls.py  views.py
django_project/blog/migrations/: 0001_initial.py
django_project/django_project/: settings.py  urls.py
django_project/static/css/: style.css
django_project/static/js/: app.js
django_project/templates/: base.html
